added express-validator and DTO
